# qml_enose

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.7549f6f  Enose.qml  LoginScreen.qml  Main.qml  README.md  ReadingsGraph.qml  Resources.qrc  appqmlctrl_qmltyperegistrations.cpp  authhandler.cpp  authhandler.h  build.ninja  cmake_install.cmake  enose.cpp  enose.h  fileDump.txt  main.cpp  qtcsettings.cmake
